<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayoutShareActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/theme_district_button_on_color">
    <RelativeLayout
        android:id="@+id/RelativeLayoutMainTitle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/navigationbar_bg">
		<Button 
		    android:id="@+id/ButtonActivityShareBack"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/layout_onclick"
		    android:text="@string/back"
		    android:textColor="@color/white"
		    android:textSize="17sp"
		    android:layout_centerVertical="true"/>
		
        <TextView
            android:id="@+id/TextViewMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/activity_share_title"
            android:textSize="17sp"
            android:textColor="@color/white" />

    </RelativeLayout>
    
	<LinearLayout 
	    android:id="@+id/LinearLayoutShareContext"
	    android:layout_below="@+id/RelativeLayoutMainTitle"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@drawable/layout_edging_style">
		<ImageView 
		    android:id="@+id/ImageViewType"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"/>
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView 
		        android:id="@+id/TextViewName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="2dp"
		        android:textSize="14sp"
		        android:textColor="@color/gray"/>
		    <TextView 
		        android:id="@+id/TextViewTime"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingBottom="2dp"
		        android:textSize="14sp"
		        android:textColor="@color/gray"/>
		</LinearLayout>
		<TextView 
		    android:id="@+id/TextViewValue"
		    android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:gravity="right"
	        android:paddingRight="5dp"
	        android:textSize="17sp"
	        android:textColor="@color/green"
	        android:singleLine="true"/>
	</LinearLayout>
	<EditText 
	    android:id="@+id/EditTextShareTextContent"
	    android:layout_below="@+id/LinearLayoutShareContext"
	    android:gravity="left"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:layout_width="fill_parent"
	    android:layout_height="150dp"
	    android:hint="@string/TextViewShareHint"
	    android:textColor="@color/black"
	    android:textSize="17sp"
	    android:background="@drawable/layout_edging_style"/>

	<ImageView
	    android:id="@+id/ImageViewSharePicture"
	    android:layout_width="100dp"
	    android:layout_height="100dp"
	    android:layout_below="@+id/EditTextShareTextContent"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/LinearLayoutShareLocation" 
        android:layout_below="@+id/ImageViewSharePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
	    android:background="@drawable/share_location_back">
        <ImageView 
            android:id="@+id/ImageViewShareLocationStatusPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_vertical"/>
        <TextView 
            android:id="@+id/TextViewShareLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="17sp"/>
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location_setalias_go"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
    </LinearLayout>

    <Button
        android:id="@+id/ButtonShare"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/share_button_back"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="30sp" />

</RelativeLayout>